# tactical-command-center-simulator

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  learnings.md
cc-core/: CMakeLists.txt
cc-core/include/: Target.h  TargetManager.h  UdpReceiver.h
cc-core/src/: Target.cpp  TargetManager.cpp  UdpReceiver.cpp
command-receiver/: CMakeLists.txt
command-receiver/src/: main.cpp
qt-operator/: CMakeLists.txt
qt-operator/include/: MainWindow.h
qt-operator/src/: MainWindow.cpp  main.cpp
target-simulator/: CMakeLists.txt
target-simulator/src/: main.cpp
tests/: CMakeLists.txt  target_test.cpp
